Fixed Launch4J